bin/tests/snapshots/manual_inherit_from__lint_31f624ee990e0fb3f3ac2f7d6ec94fd56b6a3090ccf52083f0a99a4611f4f730.snap
---
source: bin/tests/manual_inherit_from.rs
expression: "\"{ z = x.y.z or \\\"default\\\"; }\""
---

